[tool.poetry]
name = "graphly"
version = "0.1.0"
description = "SPARQL to pandas interface"
authors = ["Magdalena Surowka <magdalena@surowka.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.9.0"
requests = "^2.25.1"
networkx = "^2.5.1"
matplotlib = "^3.4.1"
pandas = "^1.2.4"
setuptools = "^56.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
